# hypershell

./: Cargo.toml  LICENSE  README.md
crates/hypershell/: Cargo.toml
crates/hypershell-apps/: Cargo.toml
crates/hypershell-apps/src/: lib.rs  presets.rs
crates/hypershell-apps/src/contexts/: app.rs  cli.rs  http.rs  mod.rs
crates/hypershell-apps/tests/tests/: basic_exec.rs  field.rs  mod.rs  pipe.rs
crates/hypershell-components/: Cargo.toml
crates/hypershell-components/src/: lib.rs  presets.rs
crates/hypershell-components/src/components/: command_arg.rs  extract_arg.rs  method_arg.rs  mod.rs  string_arg.rs  url_arg.rs
crates/hypershell-components/src/dsl/: arg.rs  args.rs  command.rs  convert.rs  exec.rs  file.rs  http.rs  json.rs  mod.rs  out.rs  pipe.rs  use.rs
crates/hypershell-components/src/providers/: box_async.rs  call.rs  convert.rs  extract_arg.rs  method_arg.rs  mod.rs  pipe.rs  return.rs  run.rs  string_arg.rs  url_arg.rs  use.rs
crates/hypershell-components/src/traits/: mod.rs  wrap_static_arg.rs
crates/hypershell-examples/: Cargo.toml
crates/hypershell-examples/examples/: bluesky.rs  bluesky_websocket.rs  compare_and_branch.rs  github_issues.rs  hello.rs  hello_name.rs  http_checksum.rs  http_checksum_cli.rs  http_checksum_client.rs  http_checksum_native.rs  nix_manual.rs  nix_manual_checksum.rs  nix_manual_checksum_cli.rs  parallel_compare.rs  rust_playground.rs  save_webpage.rs
crates/hypershell-examples/src/: dsl.rs  lib.rs
crates/hypershell-examples/src/presets/: checksum.rs  compare.rs  mod.rs
crates/hypershell-examples/src/providers/: compare.rs  if.rs  mod.rs
crates/hypershell-examples/tests/: main.rs
crates/hypershell-examples/tests/tests/: basic_exec.rs  field.rs  pipe.rs
crates/hypershell-hash-components/: Cargo.toml
crates/hypershell-hash-components/src/: dsl.rs  lib.rs  providers.rs
crates/hypershell-hash-components/src/providers/: bytes_to_hex.rs  mod.rs  stream_checksum.rs
crates/hypershell-json-components/: Cargo.toml
crates/hypershell-json-components/src/: lib.rs  presets.rs
crates/hypershell-json-components/src/providers/: handler.rs
crates/hypershell-macro/: Cargo.toml
crates/hypershell-macro/src/: expand.rs  lib.rs
crates/hypershell-reqwest-components/: Cargo.toml
crates/hypershell-reqwest-components/src/: lib.rs  presets.rs
crates/hypershell-reqwest-components/src/components/: client.rs  mod.rs  update_builder.rs
crates/hypershell-reqwest-components/src/dsl/: mod.rs
crates/hypershell-reqwest-components/src/providers/: convert.rs  core_request.rs  headers.rs  join_url.rs  method_arg.rs  mod.rs  simple_request.rs  streaming_request.rs  url_encode.rs
crates/hypershell-tests/: Cargo.toml
crates/hypershell-tests/examples/: bluesky.rs  rust_playground.rs
crates/hypershell-tests/tests/tests/: basic_exec.rs  basic_http.rs  field.rs  mod.rs  pipe.rs  streaming_exec.rs  streaming_http.rs  websocket.rs
crates/hypershell-tokio-components/: Cargo.toml
crates/hypershell-tokio-components/src/: lib.rs  presets.rs
crates/hypershell-tokio-components/src/components/: mod.rs  update_command.rs
crates/hypershell-tokio-components/src/dsl/: exec.rs  mod.rs  stream.rs
crates/hypershell-tokio-components/src/providers/: core_exec.rs  file.rs  join_args.rs  line.rs  mod.rs  out.rs  simple_exec.rs  stream.rs  streaming_exec.rs  update_command.rs
crates/hypershell-tokio-components/src/types/: futures_async_read.rs  futures_stream.rs  mod.rs  output.rs  tokio_async_read.rs
crates/hypershell-tungstenite-components/: Cargo.toml
crates/hypershell-tungstenite-components/src/: lib.rs  presets.rs
crates/hypershell-tungstenite-components/src/providers/: websocket.rs
crates/hypershell/src/: lib.rs  prelude.rs  presets.rs
crates/hypershell/src/contexts/: cli.rs  http.rs
