[workspace]

resolver = "3"

members = [
    "crates/hypershell-apps",
    "crates/hypershell-components",
    "crates/hypershell-json-components",
    "crates/hypershell-reqwest-components",
    "crates/hypershell-tokio-components",
    "crates/hypershell-macro",
    "crates/hypershell-tests",
]

[workspace.package]
rust-version    = "1.87"
edition         = "2024"
license         = "MIT"
repository      = "https://github.com/contextgeneric/cgp"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                 = { version = "0.4.0" }
cgp-error-anyhow    = { version = "0.4.0" }
futures             = { version = "0.3.31" }
reqwest             = { version = "0.12.15" }
serde               = { version = "1.0.219", default-features = false }
serde_json          = { version = "1.0.140", default-features = false }
tokio               = { version = "1.45.0" }
tokio-util          = { version = "0.7.15" }
itertools           = { version = "0.14.0" }
url                 = { version = "2.5.4" }

hypershell-apps                 = { version = "0.1.0" }
hypershell-components           = { version = "0.1.0" }
hypershell-json-components      = { version = "0.1.0" }
hypershell-reqwest-components   = { version = "0.1.0" }
hypershell-tokio-components     = { version = "0.1.0" }
hypershell-macro                = { version = "0.1.0" }

[patch.crates-io]
hypershell-apps                 = { path = "./crates/hypershell-apps" }
hypershell-components           = { path = "./crates/hypershell-components" }
hypershell-json-components      = { path = "./crates/hypershell-json-components" }
hypershell-reqwest-components   = { path = "./crates/hypershell-reqwest-components" }
hypershell-tokio-components     = { path = "./crates/hypershell-tokio-components" }
hypershell-macro                = { path = "./crates/hypershell-macro" }

cgp                         = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-core                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-extra                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-async                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-async-macro             = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-component               = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-macro                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-macro-lib               = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-type                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-field                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-error                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-error-extra             = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-run                     = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-runtime                 = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-sync                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-inner                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-handler                 = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
cgp-error-anyhow            = { git = "https://github.com/contextgeneric/cgp.git", branch = "handler" }
