[workspace]

resolver = "3"

members = [
    "crates/hypershell",
    "crates/hypershell-components",
    "crates/hypershell-json-components",
    "crates/hypershell-reqwest-components",
    "crates/hypershell-tokio-components",
    "crates/hypershell-tungstenite-components",
    "crates/hypershell-macro",
    "crates/hypershell-examples",
    "crates/hypershell-hash-components",
]

[workspace.package]
rust-version    = "1.87"
edition         = "2024"
license         = "MIT"
repository      = "https://github.com/contextgeneric/cgp"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                 = { version = "0.4.1" }
cgp-error-anyhow    = { version = "0.4.1" }
futures             = { version = "0.3.31" }
hex                 = { version = "0.4.3" }
itertools           = { version = "0.14.0" }
proc-macro2         = { version = "1.0.95" }
quote               = { version = "1.0.40" }
reqwest             = { version = "0.12.15" }
serde               = { version = "1.0.219", default-features = false }
serde_json          = { version = "1.0.140", default-features = false }
sha2                = { version = "0.10.9" }
tokio               = { version = "1.45.0" }
tokio-tungstenite   = { version = "0.26.2" }
tokio-util          = { version = "0.7.15" }
url                 = { version = "2.5.4" }

hypershell                          = { version =  "0.1.0" }
hypershell-components               = { version =  "0.1.0" }
hypershell-json-components          = { version =  "0.1.0" }
hypershell-reqwest-components       = { version =  "0.1.0" }
hypershell-tokio-components         = { version =  "0.1.0" }
hypershell-tungstenite-components   = { version =  "0.1.0" }
hypershell-hash-components          = { version =  "0.1.0" }
hypershell-macro                    = { version =  "0.1.0" }

[patch.crates-io]
hypershell                          = { path = "./crates/hypershell" }
hypershell-components               = { path = "./crates/hypershell-components" }
hypershell-json-components          = { path = "./crates/hypershell-json-components" }
hypershell-reqwest-components       = { path = "./crates/hypershell-reqwest-components" }
hypershell-tokio-components         = { path = "./crates/hypershell-tokio-components" }
hypershell-tungstenite-components   = { path = "./crates/hypershell-tungstenite-components" }
hypershell-hash-components          = { path = "./crates/hypershell-hash-components" }
hypershell-macro                    = { path = "./crates/hypershell-macro" }

# cgp                         = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-core                    = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-extra                   = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-async                   = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-async-macro             = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-component               = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-macro                   = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-macro-lib               = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-type                    = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-field                   = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-error                   = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-error-extra             = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-run                     = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-runtime                 = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-sync                    = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-inner                   = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-handler                 = { git = "https://github.com/contextgeneric/cgp.git" }
# cgp-error-anyhow            = { git = "https://github.com/contextgeneric/cgp.git" }
