[package]
name         = "hypershell-apps"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming runner component
"""

[dependencies]
hypershell-components           = { workspace = true }
hypershell-reqwest-components   = { workspace = true }
hypershell-tokio-components     = { workspace = true }

reqwest                 = { workspace = true }
cgp                     = { workspace = true }
cgp-error-anyhow        = { workspace = true }
