[package]
name         = "hypershell-components"
version      = "0.4.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming runner component
"""

[dependencies]
cgp-core    = { version = "0.4.0", default-features = false }
