[package]
name         = "hypershell-examples"
version      =  "0.1.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
hypershell                      = { workspace = true }
hypershell-components           = { workspace = true }
hypershell-tokio-components     = { workspace = true }
hypershell-macro                = { workspace = true }

cgp                     = { workspace = true }
cgp-error-anyhow        = { workspace = true }
futures                 = { workspace = true }
reqwest                 = { workspace = true }
serde                   = { workspace = true, features = [ "derive" ] }
tokio                   = { workspace = true, features = [ "macros", "rt", "io-std", "rt-multi-thread" ] }
tokio-util              = { workspace = true, features = [ "compat" ] }
