[package]
name         = "hypershell-examples"
version      =  "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Modular DSL for shellscripting in Rust"

[dependencies]
hypershell                          = { workspace = true }
hypershell-components               = { workspace = true }
hypershell-tokio-components         = { workspace = true }
hypershell-hash-components          = { workspace = true }
hypershell-tungstenite-components   = { workspace = true }

cgp                     = { workspace = true }
cgp-error-anyhow        = { workspace = true }
futures                 = { workspace = true }
hex                     = { workspace = true }
reqwest                 = { workspace = true }
sha2                    = { workspace = true }
serde                   = { workspace = true, features = [ "derive" ] }
tokio                   = { workspace = true, features = [ "macros", "rt", "io-std", "rt-multi-thread" ] }
tokio-util              = { workspace = true, features = [ "compat" ] }
tokio-tungstenite       = { workspace = true }
