[package]
name         = "hypershell-json-components"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming runner component
"""

[dependencies]
hypershell-components   = { workspace = true }

cgp                     = { workspace = true }
serde                   = { workspace = true, features = [ "alloc" ] }
serde_json              = { workspace = true, features = [ "alloc" ] }
