[package]
name         = "hypershell-macro"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[lib]
proc-macro = true

[dependencies]
cgp     = { workspace = true }
