[package]
name         = "hypershell-macro"
version      =  "0.1.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Modular DSL for shellscripting in Rust"

[lib]
proc-macro = true

[dependencies]
cgp             = { workspace = true }
quote           = { workspace = true }
proc-macro2     = { workspace = true }
