[package]
name         = "hypershell-reqwest-components"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
hypershell-components   = { workspace = true }

cgp                     = { workspace = true }
reqwest                 = { workspace = true, features = [ "stream" ] }
url                     = { workspace = true }
futures                 = { workspace = true }
