[package]
name         = "hypershell-reqwest-components"
version      =  "0.1.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Modular DSL for shellscripting in Rust"

[dependencies]
hypershell-components           = { workspace = true }
hypershell-tokio-components     = { workspace = true }

cgp                     = { workspace = true }
futures                 = { workspace = true }
reqwest                 = { workspace = true, features = [ "stream" ] }
tokio                   = { workspace = true }
tokio-util              = { workspace = true, features = [ "compat" ] }
url                     = { workspace = true }
