[package]
name         = "hypershell-tests"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming runner component
"""

[dependencies]
hypershell-apps                 = { workspace = true }
hypershell-components           = { workspace = true }
hypershell-tokio-components     = { workspace = true }

cgp                     = { workspace = true }
cgp-error-anyhow        = { workspace = true }
tokio                   = { workspace = true, features = [ "macros", "rt" ] }
