[package]
name         = "hypershell-tests"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
hypershell-apps                 = { workspace = true }
hypershell-components           = { workspace = true }
hypershell-tokio-components     = { workspace = true }
hypershell-macro                = { workspace = true }

cgp                     = { workspace = true }
cgp-error-anyhow        = { workspace = true }
futures                 = { workspace = true }
reqwest                 = { workspace = true }
serde                   = { workspace = true, features = [ "derive" ] }
tokio                   = { workspace = true, features = [ "macros", "rt", "io-std" ] }
tokio-util              = { workspace = true, features = [ "compat" ] }
