[package]
name         = "hypershell-tokio-components"
version      =  "0.1.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
hypershell-components   = { workspace = true }

cgp                     = { workspace = true }
itertools               = { workspace = true }
futures                 = { workspace = true }
tokio                   = { workspace = true, features = [ "process", "io-util", "fs" ] }
tokio-util              = { workspace = true, features = [ "compat" ] }
