[package]
name         = "hypershell-tokio-components"
version      =  "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Modular DSL for shellscripting in Rust"

[dependencies]
hypershell-components   = { workspace = true }

cgp                     = { workspace = true }
itertools               = { workspace = true }
futures                 = { workspace = true }
tokio                   = { workspace = true, features = [ "process", "fs", "rt", "io-util", "io-std" ] }
tokio-util              = { workspace = true, features = [ "compat", "codec", "io" ] }
