[package]
name         = "hypershell-tungstenite-components"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
hypershell-components   = { workspace = true }

cgp                     = { workspace = true }
futures                 = { workspace = true }
tokio                   = { workspace = true }
tokio-tungstenite       = { workspace = true }
tokio-util              = { workspace = true, features = [ "compat" ] }
