[package]
name         = "hypershell-tungstenite-components"
version      =  "0.1.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Modular DSL for shellscripting in Rust"

[dependencies]
hypershell-components           = { workspace = true }
hypershell-tokio-components     = { workspace = true }

cgp                     = { workspace = true }
futures                 = { workspace = true }
tokio                   = { workspace = true }
tokio-tungstenite       = { workspace = true, features = [ "native-tls" ] }
tokio-util              = { workspace = true, features = [ "compat", "io" ] }
