[package]
name         = "hypershell"
version      =  "0.1.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Modular DSL for shellscripting in Rust"

[dependencies]
hypershell-components               = { workspace = true }
hypershell-json-components          = { workspace = true }
hypershell-reqwest-components       = { workspace = true }
hypershell-tokio-components         = { workspace = true }
hypershell-tungstenite-components   = { workspace = true }
hypershell-macro                    = { workspace = true }

cgp                     = { workspace = true }
cgp-error-anyhow        = { workspace = true }
reqwest                 = { workspace = true }
serde_json              = { workspace = true }
tokio-tungstenite       = { workspace = true }
url                     = { workspace = true }
